# pm-maestro

./: .gitignore  Cargo.toml  README.md  cfg.json
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.svelte  FocusCard.svelte  New.svelte  ProcessCard.svelte  Slider.svelte  Terminal.svelte  api.ts  app.css  types.ts
src/: main.rs  rwlock.rs
