[package]
name = "pm-maestro"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = { git="https://github.com/tokio-rs/axum", features =["ws","json"] }
axum-extra = { git="https://github.com/tokio-rs/axum", features=["typed-header"] }
axum-macros = "0.3.8"
getopts = "0.2.21"
hmac = "0.12.1"
jwt = "0.16.0"
libc = "0.2.148"
nix = "0.27.1"
reqwest = { version="0.11.20", features=["json"]  }
ringbuffer = "0.15.0"
serde = { version="1.0.188",features=["derive","rc"]}
serde_json = "1.0.107"
sha2 = "0.10.7"
simple_ringbuf = { version="0.1.2", features=["serde"]}
structopt = "0.3.26"
timeout-readwrite = "0.3.3"
tokio = {version= "1.32.0",features=["full"]}
tower = "0.4.13"
tower-http = { version="0.4.4", features=["trace","fs"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
url = "2.4.1"
